# AI-PJM

./: .gitignore  CLAUDE.md  README.md  docker-compose.production.env.example  docker-compose.production.yml
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  analysis_service.py  generation_service.py  output_service.py  understanding_service.py
backend/app/ai/adapters/: __init__.py  base.py  mock_adapter.py
backend/app/api/: __init__.py  router.py  v2_router.py
backend/app/common/: enums.py  responses.py  utils.py
backend/app/core/: config.py  db.py  deps.py  exceptions.py  logging.py
backend/app/modules/analysis/: __init__.py  actions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/audit/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/modules/delivery/: __init__.py  (+13 more)
backend/app/tasks/: __init__.py  celery_app.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_action_logs.py  002_create_items.py  003_create_analyses.py  004_create_outputs.py  005_create_delivery_v2.py  006_create_delivery_framework_tables.py  007_create_auth_and_project_access.py  008_create_audit_events.py  009_create_secret_records.py  010_add_delivery_actor_fields.py  011_add_spec_provider_metadata.py  012_add_delivery_trace_ids.py
backend/scripts/: backfill_delivery_trace_ids.py  database_backup.py  database_restore.py  deployment_sync_worker.py  migrate.py  observability_alert_worker.py  performance_smoke.py  provider_quality_smoke.py  recover_symphony_runs.py  seed_delivery_capacity.py  symphony_worker.py
backend/tests/: __init__.py  conftest.py  manual_integration_test.py  manual_workbench_test.py  test_analysis.py  test_auth.py  test_delivery_v2.py  test_delivery_v2_units.py  test_health.py  test_items.py  test_migrations.py  test_output_framework.py  test_timeline.py  test_workbench.py
backend/tests/api/: __init__.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
(+134 files in other folders)
